[tool.poetry]
name = "weblog"
version = "1.0.0"
description = ""
authors = ["Vincent Wen <vincent.ww@qq.com>"]
packages = [
    { include = "weblog" },
]
classifiers = [
    'Programming Language :: Python',
    'Framework :: Pyramid',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: WSGI :: Application',
]

[tool.poetry.dependencies]
python = "^3.7"
pyramid = "^2.0"
pyramid-tm = "^2.5"
sqlalchemy = "^1.4.39"
transaction = "^3.0.1"
"zope.sqlalchemy" = "^1.6"
waitress = "^2.1.2"
pyramid-mako = "^1.1.0"
docutils = "^0.19"
pillow = "^9.2.0"
pyrss2gen = "^1.1"
alembic = "^1.8.0"
pyyaml = "^6.0"
click = "^8.1.3"
python-dateutil = "^2.8.2"
lingua = "^4.15.0"
babel = "^2.10.3"
pygments = "^2.12.0"

[tool.poetry.dev-dependencies]
webtest = "^3.0.0"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
uwsgi = "^2.0.22"

[tool.poetry.plugins."paste.app_factory"]
"main" = "weblog:main"

[tool.poetry.scripts]
weblog_initdb = "weblog.scripts.initializedb:main"
weblog_load_posts = "weblog.scripts.load_posts:main"

[[tool.poetry.source]]
name = 'private'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
